[package]
name = "rl4"
version = "0.1.0"
edition = "2021"
authors = ["Chad Thielen"]

# Disables stack unwinding on panic
# This profile is used on `cargo build`
[profile.dev]
panic = "abort"
debug = true

# This profile is used on `cargo build --release`
[profile.release]
panic = "abort"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.23", features = ["map_physical_memory"]}
elf = {version = "0.7.2", default-features = false}
spin = "0.9.8"
x86_64 = "0.14.10"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
